--- a/public/css/book_form.css
+++ b/public/css/book_form.css
@@ -82,7 +82,7 @@ body {
 .container input {
     font-size: 1.35rem;
     padding: 8px;
-    width: 100%;
+    width: 70%;
     height: 10%;
     border: 3.5px solid #000;
     border-radius: 7px;
@@ -138,7 +138,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80%;
     padding: 0 5%;
     margin-bottom: 2%;
 }
@@ -147,7 +146,6 @@ body {
     text-align: center;
     border: 3.5px solid #000;
     padding: 1%;
-    width: 40%;
     border-radius: 7px;
     font-size: 1.25rem;
 }
@@ -235,11 +233,11 @@ body {
         align-items: center;
     }
 
-    label {
+    .container label {
         font-size: 1.5rem;
     }
     
-    input{
+    .container input{
         font-size: 1.5rem;
         padding: 5px 5px;
         height: 8%;
@@ -272,7 +270,6 @@ body {
         border: 3px solid #000;
         padding: 1%;
         font-size: 1.4rem;
-        width: 60%;
     }
 
     .btn {
@@ -296,11 +293,11 @@ body {
         font-size: 2.5rem;   
     }
 
-    label {
+    .container label {
         font-size: 2.3rem;
     }
     
-    input{
+    .container input{
         font-size: 1.9rem;
     }
 
