--- a/public/css/loan_view.css
+++ b/public/css/loan_view.css
@@ -2,33 +2,55 @@
     padding: 2rem;
 }
 
-.loan-item a {
+.loan-info p {
+    color: #181143;
+}
+
+.loan-info-title {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 10px;
+}
+
+.loan-info-title a {
+    font-family: "Playfair Display";
+    font-size: 2rem;
     text-decoration: none;
-    color: inherit;
+    color: #181143;
+    margin: 0;
+    padding: 0;
 }
 
 .loan-item a:hover {
     text-decoration: underline;
 }
 
-.loan-section {
+.loan-container {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+.loan-section {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 30px 75px;
+    justify-content: center;
+    align-items: center;
 }
 
 .loan-item {
     display: flex;
     align-items: center;
+    justify-content: center;
     background-color: #f7f1f1;
-    margin: 2vh 4vw;
-    padding: 2vh 4vw;
-    border-radius: 4rem;
-    width: 60vw;
+    border-radius: 40px;
+    width: 500px;
+    height: 250px;
 }
 
 .loan-cover {
-    background-color: aqua;
-    width: 180px;
+    width: 125px;
     height: auto;
     margin-right: 25px;
 }
@@ -36,6 +58,56 @@
 .loan-cover img {
     width: auto;
     height: auto;
+}
+
+.pdf-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    background-color: #181143;
+    color: #ffffff;
+    width: 250px;
+    height: 50px;
+    border-radius: 25px;
+    border: none;
+    cursor: pointer;
+}
+
+.pdf-btn:hover {
+    background-color: #2e2858;
+}
+
+.pdf-btn svg {
+    width: 30px;
+    height: 30px;
+    fill: #ffffff;
+}
+
+.loan-confirmation {
+    width: 100%;
+    height: 80vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.loan-confirmation-content {
+    color: #181143;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f5f5dc;
+    width: 400px;
+    height: 200px;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.loan-confirmation-content p {
+    font-size: 1.2rem;
 }
 
 @media screen and (max-width: 815px){
